# scapremai

./: .gitignore  LICENSE  README.md
src/cpp/: .clang-tidy  CMakeLists.txt  conanfile.txt  python-dev-requirements.txt
src/cpp/mapried/sampling/: jsoncpp.cpp  jsoncpp.h  parse.cpp  parse.h  types.h
src/cpp/scapremai/: sampler.cpp
src/cpp/scapremai/mapried/sampling/: jsoncpp.cpp  jsoncpp.h  parse.cpp  parse.h  types.h
src/mapry/: generate.py  python-dev-requirements.txt  sampling.json
src/py/component_tests/: component_test_sampler.py
test_data/component_test_sampler/basic/: sampling.json
